# capnproto

./: .gitignore  CMakeLists.txt  CMakePresets.json  conan-cmake.cmake  conanfile.txt
c++/: CMakeLists.txt
c++/src/capnp/: rpc.c++
c++/src/kj/: CMakeLists.txt  async-test.c++  async.c++
c++/src/kj/compat/: http.c++
